crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLE1205_logging_E1205.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    LoggingTooManyArgs: ~
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 15
  fix: ~
  parent: ~

