crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLE1205_logging_too_many_args.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
---
./resources/test/fixtures/pylint/logging_too_many_args.py:3:1: PLE1205 Too many arguments for `logging` format string
  |
3 | import logging
4 | 
5 | logging.warning("Hello %s", "World!", "again")  # [logging-too-many-args]
  | ^^^^^^^^^^^^^^^ PLE1205
6 | 
7 | logging.warning("Hello %s", "World!", "again", something="else")
  |

./resources/test/fixtures/pylint/logging_too_many_args.py:5:1: PLE1205 Too many arguments for `logging` format string
  |
5 | logging.warning("Hello %s", "World!", "again")  # [logging-too-many-args]
6 | 
7 | logging.warning("Hello %s", "World!", "again", something="else")
  | ^^^^^^^^^^^^^^^ PLE1205
8 | 
9 | logging.warning("Hello %s", "World!")
  |


