crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLE1206_logging_E1206.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    LoggingTooFewArgs: ~
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 15
  fix: ~
  parent: ~

