crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLE1206_logging_too_few_args.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
---
./resources/test/fixtures/pylint/logging_too_few_args.py:3:1: PLE1206 Not enough arguments for `logging` format string
  |
3 | import logging
4 | 
5 | logging.warning("Hello %s %s", "World!")  # [logging-too-few-args]
  | ^^^^^^^^^^^^^^^ PLE1206
6 | 
7 | # do not handle calls with kwargs (like pylint)
  |


