crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLE1300_bad_format_character.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
---
bad_format_character.py:5:1: PLE1300 Unsupported format character 'z'
  |
3 | ## Old style formatting
4 | 
5 | "%s %z" % ("hello", "world")  # [bad-format-character]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PLE1300
6 | 
7 | "%s" "%z" % ("hello", "world")  # [bad-format-character]
  |

bad_format_character.py:7:1: PLE1300 Unsupported format character 'z'
  |
5 | "%s %z" % ("hello", "world")  # [bad-format-character]
6 | 
7 | "%s" "%z" % ("hello", "world")  # [bad-format-character]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PLE1300
8 | 
9 | """%s %z""" % ("hello", "world")  # [bad-format-character]
  |

bad_format_character.py:9:1: PLE1300 Unsupported format character 'z'
   |
 7 | "%s" "%z" % ("hello", "world")  # [bad-format-character]
 8 | 
 9 | """%s %z""" % ("hello", "world")  # [bad-format-character]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PLE1300
10 | 
11 | """%s""" """%z""" % ("hello", "world")  # [bad-format-character]
   |

bad_format_character.py:11:1: PLE1300 Unsupported format character 'z'
   |
 9 | """%s %z""" % ("hello", "world")  # [bad-format-character]
10 | 
11 | """%s""" """%z""" % ("hello", "world")  # [bad-format-character]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PLE1300
12 | 
13 | ## New style formatting
   |


