crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLE1307_bad_string_format_type.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
expression: diagnostics
---
- - kind:
      name: BadStringFormatType
      body: Format type does not match argument type
      suggestion: ~
      fixable: false
    location:
      row: 2
      column: 6
    end_location:
      row: 2
      column: 58
    fix: ~
    parent: ~
  - kind:
      name: BadStringFormatType
      body: Format type does not match argument type
      suggestion: ~
      fixable: false
    location:
      row: 4
      column: 0
    end_location:
      row: 4
      column: 26
    fix: ~
    parent: ~
  - kind:
      name: BadStringFormatType
      body: Format type does not match argument type
      suggestion: ~
      fixable: false
    location:
      row: 6
      column: 0
    end_location:
      row: 6
      column: 10
    fix: ~
    parent: ~
  - kind:
      name: BadStringFormatType
      body: Format type does not match argument type
      suggestion: ~
      fixable: false
    location:
      row: 7
      column: 0
    end_location:
      row: 7
      column: 10
    fix: ~
    parent: ~
  - kind:
      name: BadStringFormatType
      body: Format type does not match argument type
      suggestion: ~
      fixable: false
    location:
      row: 8
      column: 0
    end_location:
      row: 8
      column: 24
    fix: ~
    parent: ~
  - kind:
      name: BadStringFormatType
      body: Format type does not match argument type
      suggestion: ~
      fixable: false
    location:
      row: 9
      column: 0
    end_location:
      row: 9
      column: 10
    fix: ~
    parent: ~
  - kind:
      name: BadStringFormatType
      body: Format type does not match argument type
      suggestion: ~
      fixable: false
    location:
      row: 10
      column: 0
    end_location:
      row: 10
      column: 24
    fix: ~
    parent: ~
  - kind:
      name: BadStringFormatType
      body: Format type does not match argument type
      suggestion: ~
      fixable: false
    location:
      row: 12
      column: 0
    end_location:
      row: 12
      column: 12
    fix: ~
    parent: ~
  - kind:
      name: BadStringFormatType
      body: Format type does not match argument type
      suggestion: ~
      fixable: false
    location:
      row: 13
      column: 0
    end_location:
      row: 13
      column: 23
    fix: ~
    parent: ~
  - kind:
      name: BadStringFormatType
      body: Format type does not match argument type
      suggestion: ~
      fixable: false
    location:
      row: 14
      column: 6
    end_location:
      row: 14
      column: 34
    fix: ~
    parent: ~
  - kind:
      name: BadStringFormatType
      body: Format type does not match argument type
      suggestion: ~
      fixable: false
    location:
      row: 15
      column: 0
    end_location:
      row: 15
      column: 19
    fix: ~
    parent: ~

