crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLE1507_invalid_envvar_value.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    name: InvalidEnvvarValue
    body: "Invalid type for initial `os.getenv` argument; expected `str`"
    suggestion: ~
    fixable: false
  location:
    row: 3
    column: 10
  end_location:
    row: 3
    column: 11
  fix: ~
  parent: ~
- kind:
    name: InvalidEnvvarValue
    body: "Invalid type for initial `os.getenv` argument; expected `str`"
    suggestion: ~
    fixable: false
  location:
    row: 7
    column: 10
  end_location:
    row: 7
    column: 19
  fix: ~
  parent: ~

