crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLE1700_yield_from_in_async_function.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
---
yield_from_in_async_function.py:7:5: PLE1700 `yield from` statement in async function; use `async for` instead
  |
7 | async def fail():
8 |     l = (1, 2, 3)
9 |     yield from l
  |     ^^^^^^^^^^^^ PLE1700
  |


