crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLE2502_bidirectional_unicode.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    BidirectionalUnicode: ~
  location:
    row: 2
    column: 6
  end_location:
    row: 2
    column: 13
  fix: ~
  parent: ~
- kind:
    BidirectionalUnicode: ~
  location:
    row: 5
    column: 10
  end_location:
    row: 5
    column: 14
  fix: ~
  parent: ~
- kind:
    BidirectionalUnicode: ~
  location:
    row: 8
    column: 19
  end_location:
    row: 8
    column: 27
  fix: ~
  parent: ~
- kind:
    BidirectionalUnicode: ~
  location:
    row: 14
    column: 4
  end_location:
    row: 14
    column: 49
  fix: ~
  parent: ~

